--- a/view/picture_push.html
+++ b/view/picture_push.html
@@ -1,4 +1,5 @@
 <!DOCTYPE HTML>
+
 <html>
 	<head>
 		<title>Future Imperfect by HTML5 UP</title>
@@ -7,7 +8,11 @@
 		<link rel="stylesheet" href="main.css" />
 	</head>
 	<body class="is-preload">
+
+		<!-- Wrapper -->
 			<div id="wrapper">
+
+				<!-- Header -->
 					<header id="header">
 						<h1><a href="index">萍水相逢</a></h1>
 						<nav class="links">
@@ -25,30 +30,29 @@
 							</ul>
 						</nav>
 					</header>
+
+				<!-- Menu -->
 					<section id="menu">
-
-							<section>
-								<form class="search" method="get" action="#">
-									<input type="text" name="query" placeholder="Search" />
-								</form>
-							</section>
-
+						<!-- Actions -->
 							<section>
 								<ul class="actions stacked">
-									<li><a href="/" class="button large fit">Log out</a></li>
+									<li><a href="#" class="button large fit">Log In</a></li>
 								</ul>
 							</section>
 
 					</section>
-
+                    
+				<!-- Main -->
 					<div id="main">                                  
+						<!-- tital -->
 								<header>
 									<div class="title">
 										<h2>發表圖片</h2>
 										<p>( /  ● ▽ ● )/</p>
 									</div>
 								</header>
-
+	
+						<!-- Post -->
 							<article class="post">
                                 <form action="http://localhost:3001/upload" method="post" enctype="multipart/form-data">
 								<header>
@@ -68,9 +72,10 @@
 							</article>
 					</div>
 
+				<!-- Sidebar -->
 					<section id="sidebar">
 
-						<!-- 介紹 -->
+						<!-- Intro -->
 							<section id="intro">
 								<header>
 									<h2>暱稱</h2>
