--- a/view/index.html
+++ b/view/index.html
@@ -67,12 +67,9 @@
 								<a href="single.html" class="image featured"><img src="whethering_cover.jpg" alt="" /></a>
 								<p>Mauris neque quam, fermentum ut nisl vitae, convallis maximus nisl. Sed mattis nunc id lorem euismod placerat.Vivamus porttitor magna enim, ac accumsan tortor cursus at. Phasellus sed ultricies mi non congue ullam corper. Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
 								<footer>
-									<ul class="actions">
-										<li><a href="single.html" class="button large">Continue Reading</a></li>
-									</ul>
 									<ul class="stats">
-										<li><div class="like_button"><button><a class="icon solid fa-heart"  id="like1"><span class="count">28</span></a></button></div class="like_button"></li>
-										<li><a href="#" class="icon solid fa-comment">128</a></li>
+										<li><div class="like_button"><button><a class="icon solid fa-heart"  id="like1"><span class="count">528</span></a></button></div class="like_button"></li>
+										<li><a href="public_some" class="icon solid fa-comment">128</a></li>
 										<li><a href="#">Report</a></li>
 									</ul>
 								</footer>
@@ -86,19 +83,16 @@
 										<p></p>
 									</div>
 									<div class="meta">
-										<time class="published" datetime="2015-10-25">October 25, 2015</time>
+										<time class="published" datetime="2019-10-25">October 25, 2019</time>
 										<a href="#" class="author"><span class="name">Jane Doe</span><img src="avatar.jpg" alt="" /></a>
 									</div>
 								</header>
 								<a href="single.html" class="image featured"><img src="pic02.jpg" alt="" /></a>
 								<p>Mauris neque quam, fermentum ut nisl vitae, convallis maximus nisl. Sed mattis nunc id lorem euismod placerat. Vivamus porttitor magna enim, ac accumsan tortor cursus at. Phasellus sed ultricies mi non congue ullam corper.</p>
 								<footer>
-									<ul class="actions">
-										<li><a href="single.html" class="button large">Continue Reading</a></li>
-									</ul>
 									<ul class="stats">
-										<li><div class="like_button2"><button><a class="icon solid fa-heart" id="like2"><span class="count2">42</span></a></button></div class="like_button"></li>
-										<li><a href="#" class="icon solid fa-comment">13</a></li>
+										<li><div class="like_button2"><button><a class="icon solid fa-heart" id="like2"><span class="count2">96</span></a></button></div class="like_button"></li>
+										<li><a href="public_some" class="icon solid fa-comment">13</a></li>
 										<li><a href="#">Report</a></li>
 									</ul>
 								</footer>
@@ -112,19 +106,16 @@
 										<p>Lorem ipsum dolor amet nullam consequat etiam feugiat</p>
 									</div>
 									<div class="meta">
-										<time class="published" datetime="2015-10-22">October 22, 2015</time>
+										<time class="published" datetime="2019-10-22">October 22, 2019</time>
 										<a href="#" class="author"><span class="name">Jane Doe</span><img src="avatar.jpg" alt="" /></a>
 									</div>
 								</header>
 								<a href="single.html" class="image featured"><img src="/pic03.jpg" alt="" /></a>
 								<p>Mauris neque quam, fermentum ut nisl vitae, convallis maximus nisl. Sed mattis nunc id lorem euismod placerat. Vivamus porttitor magna enim, ac accumsan tortor cursus at. Phasellus sed ultricies mi non congue ullam corper. Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla. Cras vehicula tellus eu ligula viverra, ac fringilla turpis suscipit. Quisque vestibulum rhoncus ligula.</p>
 								<footer>
-									<ul class="actions">
-										<li><a href="post_18" class="button large">Continue Reading</a></li>
-									</ul>
 									<ul class="stats">
-										<li><div class="like_button3"><button><a class="icon solid fa-heart" id="like3"><span class="count3">96</span></a></button></div class="like_button"></li>
-										<li><a href="#" class="icon solid fa-comment">104</a></li>
+										<li><div class="like_button3"><button><a class="icon solid fa-heart" id="like3"><span class="count3">42</span></a></button></div class="like_button"></li>
+										<li><a href="public_some" class="icon solid fa-comment">11</a></li>
 										<li><a href="#">Report</a></li>
 									</ul>
 								</footer>
