--- a/view/public_some.html
+++ b/view/public_some.html
@@ -24,25 +24,11 @@
 
             </section>
             <div class="container">
-				<h5 class="card-title text-center">Sign In</h5>
-					<form class="form-signin" action="check" method="POST">
-						<div class="form-label-group">
-							<input type="text" id="inputEmail" class="form-control" placeholder="User-name" name="user_name" required autofocus>
-							<label for="inputEmail">User-name</label>
-						</div>
-			
-						<div class="form-label-group">
-							<input type="password" id="inputPassword" class="form-control" placeholder="Password" name="password" required>
-							<label for="inputPassword">Password</label>
-						</div>
-			
-						<div class="custom-control custom-checkbox mb-3">
-							<input type="checkbox" class="custom-control-input" id="customCheck1">
-							<label class="custom-control-label" for="customCheck1">Remember password</label>
-						</div>
-						<button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit">Sign in</button>
-						<hr class="my-4">
-					</form>
+				<h5 class="card-title text-center">發表留言</h5>
+					<form class="form-signin" action="public_success" method="POST">
+                        <textarea  cols="50" rows="5" placeholder="留言..."></textarea>
+                        <input type="submit" />
+                    </form>
 			</div>
         </div>
         <script src="jquery.min.js"></script>
