--- a/view/fans.html
+++ b/view/fans.html
@@ -35,7 +35,7 @@
 						<!-- Actions -->
 							<section>
 								<ul class="actions stacked">
-									<li><a href="#" class="button large fit">Log In</a></li>
+									<li><a href="#" class="button large fit">Log Out</a></li>
 								</ul>
 							</section>
 					</section>
