--- a/view/personality.html
+++ b/view/personality.html
@@ -40,7 +40,7 @@
 						<!-- Actions -->
 							<section>
 								<ul class="actions stacked">
-									<li><a href="/" class="button large fit">Log out</a></li>
+									<li><a href="/" class="button large fit">Log Out</a></li>
 								</ul>
 							</section>
 					</section>
