--- a/view/video_push.html
+++ b/view/video_push.html
@@ -36,7 +36,7 @@
 						<!-- Actions -->
 							<section>
 								<ul class="actions stacked">
-									<li><a href="#" class="button large fit">Log In</a></li>
+									<li><a href="#" class="button large fit">Log Out</a></li>
 								</ul>
 							</section>
 
